# cdr3fire

./: MANIFEST.in  README.md  pyproject.toml
src/cdr3fire/: __init__.py  cli.py  core.py  generators.py
tests/: test_all.py  test_core.py  test_generators.py
