[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdr3fire"
version = "0.1.0"
description = "Efficient regex pattern matching for CDR3β sequences with k-mer indexing"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
cdr3fire = "cdr3fire.cli:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/cdr3fire"
"Bug Reports" = "https://github.com/yourusername/cdr3fire/issues"
"Source" = "https://github.com/yourusername/cdr3fire"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cdr3fire = ["*.txt", "*.csv"]